--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ $dark-grayish-cyan-2: hsl(184, 14%, 56%);
 $light-grayish-cyan: hsl(185, 41%, 84%);
 $light-grayish-cyan-2: hsl(189, 41%, 97%);
 $white: hsl(0, 0%, 100%);
-$darkRed: darkred;
+$darkRed: hsl(0, 100%, 27%);
 
 @mixin flex {
     display: flex;
@@ -211,7 +211,11 @@ img {
 
 @media (max-width: 384px) {
     .title {
-        margin-bottom: 3rem;
+        margin: 3rem 0;
+    }
+    .page {
+        margin-top: 3rem;
+        width: 100%;
     }
     .main {
         flex-direction: column;
