--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ img {
   background: hsl(185deg, 41%, 84%);
 }
 
-@media (max-width: 384px) {
+@media screen and (max-width: 420px) {
   .title {
     margin: 3rem 0;
   }
@@ -222,6 +222,7 @@ img {
   .main {
     flex-direction: column;
     width: 100%;
+    border-radius: 0;
   }
 
   .main__left {
